--- a/index.html
+++ b/index.html
@@ -25,7 +25,24 @@
     <div class="half-width">
         <img src="my photo/my bg 3.png" alt="">
     </div>
-  </section>
+ </section>
+
+  <section class="dream-big">
+    <div class="half-width">
+        <img src="my photo/1.jpg" alt="">
+    </div>
+
+
+    <div class="half-width">
+        <h1>Dream Big</h1>
+        <h2>Become a web deveoper</h2>
+        <p>A web developer makes and maintains websites. They are in charge of a site’s overall look and feel. Web developers also
+        handle the technical aspects of a website, including its performance (website speed) and capacity (the maximum amount of
+        traffic the site could handle at a given time). A web developer is usually knowledgeable in both graphic design and
+        programming.</p>
+        <a class="link-button" target="_blank" href="https://www.programming-hero.com/">Download Resume</a>
+    </div>
+</section>
 
 
     
