--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 <section class="experience-area">
     <h1>Experiences</h1>
     <div class="flexible-container">
-        <div class="half-width">
-            <h1>Full stack web developer</h1>
-            <h3>2022-Preesent| Pro level developer</h3>
+        <div id="full-stack-developer"  class="experience-item">
+            <h1 >Full stack web developer</h1>
+            <h3 class="orange-color">2022-Preesent| Pro level developer</h3>
             <p>To get to this breadth and depth of knowledge, most full-stack developers will have spent many years working in a
                 variety of different roles. They also tend to be well-versed in both business logic and user experience, meaning
                 they
@@ -59,9 +59,9 @@
         
         </div>
         
-        <div class="half-width">
+        <div id="baby-web-developer" class="experience-item">
             <h1>Baby web developer</h1>
-            <h3>2020-2021| programming hero learner</h3>
+            <h3 class="orange-color">2020-2021| programming hero learner</h3>
             <p>To get to this breadth and depth of knowledge, most full-stack developers will have spent many years working in a
                 variety of different roles. They also tend to be well-versed in both business logic and user experience, meaning
                 they
