box style border and footer

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <section class="experience-area">
-    <h1>Experiences</h1>
+    <h1 class="exp-header">Experiences</h1>
     <div class="flexible-container">
         <div id="full-stack-developer"  class="experience-item">
             <h1 >Full stack web developer</h1>
